--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
       </header>
 
       <main role="main" class="inner cover">
-        <h1 class="cover-heading">Cover your page.</h1>
+        <h1 class="cover-heading">Contact</h1>
         <div class="container" id="contact">
           <ul class="contact-icons container-fluid ">
               <li>
