--- a/contact.html
+++ b/contact.html
@@ -62,8 +62,9 @@
 
       <footer class="mastfoot mt-auto">
         <div class="inner">
-          <p>Cover template for <a href="https://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-        </div>
+            <p>Website created by
+          
+                <a href="https://dtechdev.com">GarrettLee A Davis</a>.</p>        </div>
       </footer>
     </div>
 
