--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
 
     <footer class="mastfoot mt-auto">
       <div class="inner">
-        <p>Tempe Watch website created by GarrettLee A Davis -2018</p>
+        <p>Website created by
+
+          <a href="https://dtechdev.com">GarrettLee A Davis</a>.</p>
       </div>
     </footer>
   </div>
