--- a/portfolio.html
+++ b/portfolio.html
@@ -42,9 +42,9 @@
       </div>
     </header>
 
-    <main role="main" class="inner cover" id="insta">
-      <a href="https://www.instagram.com/p/Bjh9wacgtOh/?taken-by=artpinkos" target="blank">
-      <img src="assets/images/32823185_195840767904359_610136779122540544_n.jpg" width="20%" height="20%" />
+    <main role="main" class="inner cover container" id="insta">
+      <a  href="https://www.instagram.com/p/Bjh9wacgtOh/?taken-by=artpinkos" target="blank">
+      <img class="rounded" src="assets/images/32823185_195840767904359_610136779122540544_n.jpg" width="20%" height="20%" />
     </a>
   
 
