--- a/deals.html
+++ b/deals.html
@@ -44,9 +44,9 @@
 
     <main role="main" class="inner cover">
       <h1 class="cover-heading">Coming Soon!</h1>
-      <p class="lead">/p>
+      <p class="lead"></p>
       <p class="lead">
-        <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
+        
       </p>
     </main>
 
