--- a/deals.html
+++ b/deals.html
@@ -11,6 +11,7 @@
   <title>King Arthur Cuts</title>
 
   <!-- Bootstrap core CSS -->
+  <link href="assets/css/reset.css" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
     crossorigin="anonymous">
   <!-- Custom styles for this template -->
@@ -35,7 +36,7 @@
         <h3 class="masthead-brand">King Arthur Cuts</h3>
         <nav class="nav nav-masthead justify-content-center">
           <a class="nav-link" href="index.html">About Me</a>
-          <a class="nav-link" href="portfolio.html">Portfolio</a>
+          <a class="nav-link" href="portfolio.html">Portraits</a>
           <a class="nav-link active" href="deals.html">Deals</a>
           <a class="nav-link" href="contact.html">Contact</a>
         </nav>
