--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <title>King Arthur Cuts</title>
 
   <!-- Bootstrap core CSS -->
+  <link href="assets/css/reset.css" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
     crossorigin="anonymous">
   <!-- Custom styles for this template -->
