--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="../../../../favicon.ico">
 
     <title>King Arthur Cuts</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/reset.css" rel="stylesheet">
@@ -33,7 +34,8 @@
           <nav class="nav nav-masthead justify-content-center">
             <a class="nav-link" href="index.html">About Me</a>
             <a class="nav-link" href="portfolio.html">Portraits</a>
-            <a class="nav-link" href="deals.html">Deals</a>
+            <a class="nav-link" href="deals.html">Appointments</a>
+            <a class="nav-link" href="edu.html">Cuts</a> 
             <a class="nav-link active" href="contact.html">Contact</a>
           </nav>
         </div>
