--- a/edu.html
+++ b/edu.html
@@ -38,8 +38,8 @@
         <nav class="nav nav-masthead justify-content-center">
           <a class="nav-link" href="index.html">About Me</a>
           <a class="nav-link" href="portfolio.html">Portraits</a>
-          <a class="nav-link active" href="deals.html">Appointments</a>
-          <a class="nav-link" href="edu.html">Cuts</a>
+          <a class="nav-link" href="deals.html">Appointments</a>
+          <a class="nav-link active" href="edu.html">Cuts</a> 
           <a class="nav-link" href="contact.html">Contact</a>
         </nav>
       </div>
