--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="shortcut icon" href="http://sstatic.net/so/favicon.ico">
 
   <title>King Arthur Cuts</title>
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
   <!-- Bootstrap core CSS -->
   <link href="assets/css/reset.css" rel="stylesheet">
@@ -37,25 +38,26 @@
         <nav class="nav nav-masthead justify-content-center">
           <a class="nav-link active" href="index.html">About Me</a>
           <a class="nav-link" href="portfolio.html">Portraits</a>
-          <a class="nav-link" href="deals.html">Deals</a>
+          <a class="nav-link" href="deals.html">Appointments</a>
+          <a class="nav-link" href="edu.html">Cuts</a>
           <a class="nav-link" href="contact.html">Contact</a>
         </nav>
       </div>
     </header>
     <div class="container" id="bio">
       <div class="row">
-        <div class="card rounded-circle" style="width: 20rem;">
-          <img class="card-img-top rounded-circle" src="assets/images/arthur.jpg" alt="Card image cap">
+        <div class="rounded-circle" style="width: 20rem;">
+          <img class="card card-img-top rounded-circle" src="assets/images/arthur.jpg" alt="Card image cap">
         </div>
         <div class="col-md-7">
           <h1>Arthur Suleymanov</h1>
           <p>
-            <h4>Proffesional &amp; Licensed Barber in the Greater Tempe Area</h4>
+            <h3>Professional &amp; Licensed Barber in the Greater Tempe Area</h3>
           </p>
-          <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+          <p>As your personal barber I provide the best in classic and modern cuts. It is my mission to both educate and help
+            shape each client's barbering experience. It is my view that a quality professional barber is both a skilled
+            technician as well as an ally in each client's experience.
+
 
           </p>
         </div>
